--- a/messages.properties
+++ b/messages.properties
@@ -2,4 +2,4 @@ sprng.welcome.message=Hello LnT
 spring.message=Welcome @@@@# LnT
 spring.test=prod-branch
 spring.dev=dev
-
+spring.feature=feature1
